#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

PACKAGE=BladeSniffer
VERSIN=0.1.0

AC_PREREQ(2.68)
AC_INIT(PACKAGE, VERSION, xkdcc@163.com)
AM_INIT_AUTOMAKE(BladeSniffer, 0.1.0)
AC_CONFIG_SRCDIR([src/bcsniffer.c])
AC_CONFIG_HEADERS([config.h])

AC_SUBST(CC)
AC_SUBST(CPP)
AC_SUBST(CXXCPP)
AC_SUBST(CXX)
AC_SUBST(CCFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(CXXCPPFLAGS)
AC_SUBST(CXXFLAGS)
AC_SUBST(LD)
AC_SUBST(PREFIX)

# Checks for programs. 
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_LIBTOOL

# Checks for libraries.

# FIXME: Replace `main' with a function in `-ldl':
AC_CHECK_LIB([dl], [main])
# FIXME: Replace `main' with a function in `-lphread':
AC_CHECK_LIB([phread], [main])
# FIXME: Replace `main' with a function in `-lpthread':
AC_CHECK_LIB([pthread], [main])


# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h malloc.h netdb.h netinet/in.h stdlib.h string.h strings.h sys/file.h sys/ioctl.h sys/socket.h sys/time.h syslog.h unistd.h])



# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_FORK
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_REALLOC
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_STRERROR_R
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([alarm bzero ftruncate gethostbyname gettimeofday inet_ntoa memset socket strcasecmp strchr strerror strrchr strstr strtoul])

AC_CONFIG_FILES([Makefile
                 include/Makefile
                 lib/Makefile
                 lib/common_lib/Makefile
                 lib/data_struct_lib/Makefile
                 lib/display_lib/Makefile
                 lib/netop_lib/Makefile
                 src/Makefile])
AC_OUTPUT
