bspincludedir = $(top_srcdir)/include
bspinclude_HEADERS = 

DEFAULT_INCLUDES = -I$(top_srcdir)/include -I/usr/local/bsp/include
AM_CFLAGS = 
AM_LDFLAGS =  -rpath $(libdir) /usr/local/bsp/lib

lib_LTLIBRARIES = libbsplistop.la

libbsplistop_la_SOURCES = listop.c 
libbsplistop_la_CFLAGS = -shared 
libbsplistop_la_LIBADD = 
libbsplistop_la_LDFLAGS = 


