bspincludedir = $(top_srcdir)/include
bspinclude_HEADERS = 

DEFAULT_INCLUDES = -I$(top_srcdir)/include -I/usr/local/bsp/include
AM_CFLAGS = 
AM_LDFLAGS =  -rpath $(libdir) /usr/local/bsp/lib

lib_LTLIBRARIES = libbspdisplay.la

libbspdisplay_la_SOURCES = printmsg.c 
libbspdisplay_la_CFLAGS = -shared 
libbspdisplay_la_LIBADD = 
libbspdisplay_la_LDFLAGS = 


