bspincludedir = $(top_srcdir)/include
bspinclude_HEADERS = 

DEFAULT_INCLUDES = -I$(top_srcdir)/include -I/usr/local/bsp/include
AM_CFLAGS = 
AM_LDFLAGS =  -rpath $(libdir) /usr/local/bsp/lib

lib_LTLIBRARIES = libbspnetop.la

libbspnetop_la_SOURCES = netop.c 
libbspnetop_la_CFLAGS = -shared 
libbspnetop_la_LIBADD = 
libbspnetop_la_LDFLAGS = 


